# mangadl-rs

./: Cargo.toml  LICENSE  One-Piece.txt  README.md
.github/workflow/: images.yaml
.github/workflows/: ci.yaml  rust.yml
src/: args.rs  chapter.rs  fetch.rs  lib.rs  main.rs  manga.rs  types.rs
