[package]
name = "mangadl-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.24.3"
reqwest = { version = "0.11.11", features = ["json"] }
tokio = { version = "1.20.1", features = ["full"] }
sedregex = "0.2.5"
regex = "1.6.0"
serde = { version = "1.0.144", features = ["derive"] }
serde_json = "1.0.85"
scraper = "0.13.0"
printpdf = { version = "0.5.3", features = ["embedded_images"] }
relative-path = "1.7.2"
inquire = "0.3.0"
manic = "0.8.1"
colored = "2.0.0"
indicatif = { version = "0.17.0", features = ["tokio"] }

[profile.release]
strip = true
lto = true
codegen-units = 1
