[package]
name = "mangadl-rs"
version = "0.1.16"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "^0.24.3"
reqwest = { version = "^0.11.11", features = ["json"] }
tokio = { version = "^1.20.1", features = ["full"] }
regex = "^1.6.0"
serde = { version = "^1.0.144", features = ["derive"] }
serde_json = "^1.0.85"
scraper = "^0.17.1"
relative-path = "^1.7.2"
inquire = "^0.6.2"
manic = "^0.8.1"
indicatif = { version = "^0.17.0", features = ["tokio"] }
crossterm = "^0.27.0"
printpdf = { version = "^0.6.0", features = ["embedded_images"] }
rayon = "^1.5.3"
image_to_pdf = { git = "https://github.com/ealtun21/image-to-pdf", version = "^0.7.0", features = [
    "progress",
] }
brotlic = "^0.8.0"


[profile.release]
strip = true
lto = true
codegen-units = 1
